{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 25,
  "lineage": "91b89e08-8a45-ec69-1aea-83bac5943a0d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/Network-nsg1",
            "location": "canadaeast",
            "name": "Network-nsg1",
            "resource_group_name": "TerraformRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/Network-nsg2",
            "location": "canadaeast",
            "name": "Network-nsg2",
            "resource_group_name": "TerraformRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01",
            "name": "network-subnet01",
            "resource_group_name": "TerraformRG",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet02",
            "name": "network-subnet02",
            "resource_group_name": "TerraformRG",
            "virtual_network_name": "network-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/Network-nsg1",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet01"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet02",
            "network_security_group_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/networkSecurityGroups/Network-nsg2",
            "subnet_id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet/subnets/network-subnet02"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "688efcfa-234a-407a-a65d-7f20167ee4c4",
            "id": "/subscriptions/18821dae-fb44-44a1-805a-e1edd2ef9b06/resourceGroups/TerraformRG/providers/Microsoft.Network/virtualNetworks/network-vnet",
            "location": "canadaeast",
            "name": "network-vnet",
            "resource_group_name": "TerraformRG",
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}